# crossroads

./: .gitmodules
2018-xroads-trinity-snap/: README.ACES
2018-xroads-trinity-snap/inputs/: ._inh0001t4  inh0001t2  inh0001t4  inh0064t1  inh0064t2  inh0064t4  inh4096t1  inh4096t2  inh4096t4  runh0001  runh0064  runh4096
2018-xroads-trinity-snap/snap-src/: Makefile  control.f90  corsweep.f90  dim3_sweep.f90  inner.f90  (+11 more)
PENNANT-crossroads/: ._README.ACES
STREAM/: ._Makefile  ._README.ACES  ._xroads-stream.c  Makefile
branson-0.81/: ._README.ACES.docx  README.ACES.docx
hpcg-3.0-xroads/: ._TODO  README.ACES
ior-3.0.1-xroads/: README.XROADS~
miniPIC-crossroads/: ._README.ACES.md  ._README.ACES.txt  CMakeLists.txt  README.ACES.md  README.ACES.txt
miniPIC-crossroads/doc/talk/: beamerouterthemesandia.sty  beamerthemeSandia.sty  flashmovie.sty  macros.tex  mini-PIC-overview.tex
miniPIC-crossroads/doc/timing/: chama  compton  shannon
miniPIC-crossroads/extra/: DoxyConfig  build.inc  do-configure-minipic.sh  do-configure-trilinos-crayxc40.sh
miniPIC-crossroads/extra/testing/: test_face.sh
miniPIC-crossroads/extra/testing/face/: build.inc  do-configure.sh
miniPIC-crossroads/jenkins-test-scripts/: build.inc  build.sh  do-configure.sh
miniPIC-crossroads/test/: CMakeLists.txt  mapped.txt  regular.txt  test_ES.cpp  test_PIC.cpp  test_mesh.cpp  test_particle_list.cpp  test_single_particle.cpp  test_utils.hpp
mt-mpi-bench/: README.ACES
umt2015-crossroads/: ._umt_crossroads.md  README.ACES  make.defs.mutrino  umt_crossroads.md
vpic_crossroads/: README.ACES
(+31 files in other folders)
