INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR}/../src)

file (GLOB HEADERS *.hpp)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/regular.txt ${CMAKE_CURRENT_BINARY_DIR} )
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mapped.txt ${CMAKE_CURRENT_BINARY_DIR} )

set(TEST_NAMES ES mesh particle_list PIC single_particle)
FOREACH(item ${TEST_NAMES})
set(TEST_NAME test_${item})
ADD_EXECUTABLE( ${TEST_NAME} ${TEST_NAME}.cpp ${HEADERS} )
TARGET_LINK_LIBRARIES(${TEST_NAME} mini-PIC)
ADD_TEST(NAME mini-PIC-${TEST_NAME} COMMAND ${TEST_NAME} )
ENDFOREACH()

